--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "au.brackets-simple-sftp-upload",
 	"title": "Simple Sftp Upload",
 	"description": "Simple FTP / SFTP client. It is possible to set the test environment / production environment, upload in units of file / folder, can upload files modified on Brackets automatically, can write and read the connection setting file.",
-	"homepage": "",
-	"version": "1.2.0",
+	"homepage": "https://github.com/umehara-lp/Simple-Sftp-Upload",
+	"version": "1.2.1",
 	"keywords": ["sftp","ftp","sync", "upload", "uploader", "simple"],
 	"author": "Atsushi Umehara",
 	"license": "MIT",
